complete main logic path of REST